--- a/Saleos/Views/Shared/_AdminLayout.cshtml
+++ b/Saleos/Views/Shared/_AdminLayout.cshtml
@@ -28,7 +28,7 @@
         <ul class="navbar-nav ml-auto">
             <!-- Navbar Search -->
             <li class="nav-item">
-                <a class="nav-link" data-widget="navbar-search" href="#" role="button">
+                <a class="nav-link" asp-action="Logout" asp-controller="Login" role="button">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>登出</span>
                 </a>
