--- a/Saleos/Views/Home/Index.cshtml
+++ b/Saleos/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                     @foreach (var tags in articleInfoDto.Tags)
                     {
                         <i class="bi bi-tags-fill"></i>
-                        <a href="#" style="margin-left: 5px">@tags.Tags</a>
+                        <a href="#" style="margin-left: 5px">@tags.Content</a>
                     }
                 </div>
                 <div class="read-whole-article">
