--- a/Saleos/Views/Home/Index.cshtml
+++ b/Saleos/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 @foreach (var articleInfoDto in Model)
 {
-    <div class="home-article-info">
+    <div class="home-article-info" style="margin-bottom: 10px">
             <div class="article-main-info">
                 <div class="article-img">
                     <img src="./img/thumb_1.webp" alt=""/>
@@ -36,7 +36,4 @@
                 </div>
             </div>
     </div>
-}
-
-@section Scripts {
 }
