feat: make the editor can upload image
make the vditor can upload the image to backend
and the backend stores the image in minio

--- a/Saleos/Views/Admin/Editor.cshtml
+++ b/Saleos/Views/Admin/Editor.cshtml
@@ -159,7 +159,7 @@
 
         // it stores the article's content in order to pass the value to this javascript
         $(document).ready(function (){
-            initialVditor($('#article-content').val(), '@Url.Content("~")')
+            initialVditor($('#article-content').val(), '@Url.Content("~")', @Model.Articles.Id)
         });
     </script>
 }
